# cini

./: .gitignore  CMakeLists.txt  ini.c  ini.h
examples/: kone.ini  main.c
